update atm api dependency database connection re-ordered imports Reviewed-by: @pitzzahh